--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,9 @@
-\documentclass[12pt]{memoir}
+\documentclass[12pt,a4paper]{memoir}
+
+
+%\usepackage[T1]{fontenc}
+%\usepackage{dejavu}
+
 \usepackage[a4paper, margin=3cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{tabularx}
@@ -115,7 +120,8 @@
 \input{preliminaries}
 \input{symmetryinsat}
 \input{cosy}
-%\input{conclusion}
+\input{hybrid_cosy_spfs}
+\input{conclusion}
 
 \balance
 \bibliographystyle{abbrv}
