--- a/sbp-table.tex
+++ b/sbp-table.tex
@@ -1,6 +1,9 @@
 \begin{center}
-	
-\begin{tabular}{lllll}
+	\hakan{Mette des espaces pour les nombres si tableau ok}\\
+	\hakan{Mettre total de clause et vars et pourcentage d'augmentation}
+\begin{tabular}{lcccc}
+	Instances & \#vars & \#clause & \#sbp & \#auxiliary variables \\
+	\toprule
 	\detokenize{battleship-12-12-unsat} &  936 &  144 &  1498 &  378\\
 	\detokenize{battleship-12-23-sat} &  1662 &  276 &  5464 &  1375\\
 	\detokenize{battleship-14-26-sat} &  2562 &  364 &  3688 &  929\\
