--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -44,3 +44,14 @@
 \newcommand{\breakid}{\texttt{BreakID}}
 \newcommand{\shatter}{\texttt{Shatter}}
 \newcommand{\cdclsym}{\texttt{MiniSym}}
+
+%\newcommand{\cdclsym}{\texttt{CDCLSym}}
+\newcommand{\cdclsp}{\texttt{CDCLSp}}
+\newcommand{\cdclsymsp}{\texttt{CDCLSymSp}}
+\newcommand{\cdcl}{\texttt{CDCL}}
+
+
+
+\newcommand{\colorsp}[1]{\color{blue}#1\color{black}}
+\newcommand{\colorsym}[1]{\color{red}#1\color{black}}
+\newcommand{\colormix}[1]{\color{blak}#1\color{black}}
