--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,15 @@
 
+% SAT Competition
+@article{jarvisalo2012international,
+	title={The international SAT solver competitions},
+	author={J{\"a}rvisalo, Matti and Le Berre, Daniel and Roussel, Olivier and Simon, Laurent},
+	journal={AI Magazine},
+	volume={33},
+	number={1},
+	pages={89--92},
+	year={2012}
+}
+
  % Minisat 
 @inproceedings{een2003extensible,
 	title={An extensible SAT-solver},
@@ -69,6 +80,18 @@
 	year      = {2012}
 	
 }
+
+% SLS
+@inproceedings{benhamou2010enhancing,
+	title={Enhancing clause learning by symmetry in SAT solvers},
+	author={Benhamou, Belaid and Nabhani, Tarek and Ostrowski, Richard and Saidi, Mohamed Reda},
+	booktitle={2010 22nd IEEE International Conference on Tools with Artificial Intelligence},
+	volume={1},
+	pages={329--335},
+	year={2010},
+	organization={IEEE}
+}
+
 
 % SEL
 @inproceedings{devriendt2017symmetric,
