--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -672,6 +672,8 @@ not lex-leader assignment were eliminated by symmetry breaking predicates.
 
 \subsubsection{Symmetry Explanation Learning}
 
+\hakan{Mettre REF sur SLS \cite{benhamou2010enhancing}}
+
 Another approach to exploit symmetry without removing any satisfiable assignment of the problem
 is \emph{Symmetry Explanation Learning}~\cite{devriendt2017symmetric} (SEL). 
 Symmetries of a formula leaves this one invariant. Moreover all learned clauses are logical consequence of the problem, symmetric of these clauses are also valid.
