--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,21 @@
-\chapter{Conclusion}\label{chap:conclu}
+\chapter{Conclusion And Future Works}\label{chap:conclu}
 
-This is conclusion.
+
+
+In this thesis, we have presented a way to increase performance of solving Boolean satisfiability problem (SAT)
+on presence of symmetries. 
+
+Nowadays, SAT solvers can handled huge problems with thousands of variables and clauses. 
+It is primary due to efficiently cut off search space.
+
+studies of detection and exploitation of symmetry breaking techniques.
+
+Symmetries are 
+
+
+
+\section{Perspectives}
+
 
 
 %% Local Variables:
