--- a/fig/assignment-lex-leader.tex
+++ b/fig/assignment-lex-leader.tex
@@ -19,7 +19,7 @@
 \node[ellipse, draw, minimum width=4cm, minimum height=2cm] (c1) at (8.5,0){};
 \clip (8.5,0) ellipse (2 and 1);
 \node[point+] (p2) at (8.6, -0.1){};
-\pgfmathsetseed{499478626}
+\pgfmathsetseed{499626}
 \foreach \p in {1,...,40}
 {
 	\fill (4*rand+6,2*rand) circle (0.08);
