--- a/sbp-table.tex
+++ b/sbp-table.tex
@@ -1,5 +1,5 @@
 \begin{center}
-	\hakan{Mette des espaces pour les nombres si tableau ok}\\
+	\hakan{Mette des espaces pour les nombres et texte pour expliquer si tableau ok}\\
 	\hakan{Mettre total de clause et vars et pourcentage d'augmentation}
 \begin{tabular}{lcccc}
 	Instances & \#vars & \#clause & \#sbp & \#auxiliary variables \\
