--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -275,7 +275,8 @@ the set of generators as output.With the previous graph, the following generator
 \end{center}
 
 These permutations form a permutation group and so induce an equivalence relation.
-\Cref{fig:orbit} shows graphical representation of an orbit, where each node represents a literal. Two literals are linked with an arc if it exists a permutation that maps one to the other. 
+\Cref{fig:orbit} shows graphical representation of an orbit, where each node represents a literal.
+Two literals are linked with an arc if it exists a permutation that maps one to the other. 
 An orbit must be a \emph{strongly connected component} (SCC).  
 Some permutations have a special form like two-dimensional
 array as in this example.
@@ -292,8 +293,33 @@ by \emph{statically} posting symmetry breaking constraints that invalidate symme
 assignments, or by altering the search space \emph{dynamically} to avoid symmetric search paths.
 
 \subsection{Static symmetry breaking}
-One way to exploit symmetry properties is to forbid equivalent assignments except one.
-Let introduce an ordering relation between the assignments.
+
+Generally symmetry breaking allows SAT solver to avoid visit isomorphic search space.
+Visiting one branch is equivalent to visit each symmetric branch and so visiting this one is sufficient to 
+determine satisfiability of the whole formula. Symmetrical branch are discarded by the solver with the addition of 
+constraints. These constraint are not satisfied if the solver visit equivalent assignment.
+In other words, when symmetries of a problems are ignored, solver visit a branch multiple times.
+Suppose the \textit{pigeonhole problems}, where $n$ pigeons are put into $n-1$
+holes, with the constraint that each pigeon must be in a different hole is a
+highly symmetric problem. Indeed, all the pigeons (resp. holes) are swappable
+without changing the initial problem. Trying to solve it with a standard SAT
+solver, like MiniSAT~\cite{een2003extensible}, turns out to be very time
+consuming (and even impossible, in reasonable time, for high values of $n$).
+Here, such a standard solver ignores the symmetry property of the problem, and
+then potentially tries all variables combinations ; this eventually leads to
+a combinatorial explosion.
+
+
+This section explains how to exploit statically symmetrical properties of a SAT problem. This can be summarize with the following two 
+questions: 1) How  to choose branch that are equivalent to all symmetric ones? 2)
+how to generate constraints that forbid symmetrical assignments.
+
+
+
+
+To answer the first part of the problematic: how to choose branch that are equivalent to all symmetric ones ?
+We need to introduce an ordering relation between assignments
+
 \begin{definition}[Assignments ordering]
  \label{def:assignment_ordering}
  We assume a total order, $\prec$, on $\Vars$.  Given two assignments $(\alpha,\beta) \in \Assignments(\Vars)^2 $, 
@@ -507,40 +533,22 @@ More stabilizer discard permutations and more trivial subgroup is reached quickl
 binary clauses are generated. An incremental order is proposed to optimize the number of generates binary clauses. First, orbit of all variables is computed and the variable with fewest number of occurrence is choosing among the biggest orbit. The idea is that biggest orbit produces more
 clauses and the variable appearing in few permutations reduce the number of stabilized permutations. This procedure is applied until trivial group is reached. At the end, remaining variables are added to the order.
 
-\subsection{Evaluation of performance}
 
-\hakan{Compare BreakID et shatter perfs on instances}
-
+\subsubsection{BreakID}
 
 
-\hakan{Faire une section pour les ordres heuristics}\\
-An extremely important point is the chosen lexicographic order.
-Variable ordering may impact the number of generated constraints and so the performance of
-the underlying SAT solver. Different orders are studied in the literature. 
-One of the simplest orders was the sorted variables according to their numbers.
-Some other order exists and exploit structural properties of the 
-problem. In particular, the orbits of the variables in different ways. For example, the variables are chosen 
-with their number of occurrences in the initial problem. This order is equivalent to put largest orbit first
-and so on, because each variable on the same orbit must have the same number of occurrences.
-Another example of exploiting structural property of the orbit is the usage of \emph{stabilizer}.
-The order chooses a variable which maximize the number of stabilized permutations, removes the not stabilized ones and loop over until the empty set. The remaining variables are added to the order to get a complete order.
+As summary, $\breakid$ combines three idea. First it searches if produced generators by the automorphism tool has the special
+form row interchangeability and if that is the case exploit it. This first point establish a prefix of an order for the lex-leader.
+Secondly this order will be completed to generate a maximum number of binary lex-leader constraints. Thirdly, the order is supplemented with leftover variables until it is total and classical lex-leader constraints are added to the original formula. 
+%\subsection{Evaluation of performance}
+%\hakan{Compare BreakID et shatter perfs on instances}
+
+
 
 %The exploitation of symmetries statically is called \emph{static symmetry breaking}.
 %It acts like a preprocessor which add \emph{symmetry breaking predicates} (SBPs) at the 
 %original formula and solve the augmented problem. 
 %This approach gives good performances in practice.
-%
-%\hakan{Generation des clauses de SBPs}\\
-%\hakan{Parler des groupes speciaux  (totaux) }\\
-%\hakan{Generation des clause binaires breakid lie aux orbits}\\
-%\hakan{Parler de BreakID all in one tout au dessus}\\
-%
-%\hakan{Put a complete exemple}\\
-%
-%\hakan{Mettre des courbes}\\
-%\hakan{Tableau sur le nombre de sbp genere}\\
-%
-%\hakan{ Shatter, BreakID}
 %
 %\hakan{Conclu static}
 
@@ -553,13 +561,18 @@ effectively handled by a SAT solver~\cite{Luks2004}.
 On the other hand, if only a subset of the symmetries is considered then the resulting search pruning
 will not be perfect and its effectiveness depends heavily on the
 heuristically chosen symmetries \cite{biere2009handbook}.
+An extremely important point for static symmetry breaking is the chosen lexicographic order.
+Variable ordering may impact the number of generated constraints and so the performance of
+the underlying SAT solver. Different orders are studied in the literature. 
+One of the simplest orders was the sorted variables according to their numbers.
+Some other order exists and exploit structural properties of the 
+problem. 
 Some recent works brings some optimizations and solves more instances.
 Despite these optimizations and the good reduction of the search space with symmetries,
- some formula that exhibit symmetries still intractable for a state-of-the-art SAT solver.
- 
+some formula that exhibit symmetries still intractable for a state-of-the-art SAT solver.
+Moreover, a disadvantage of static symmetry breaking is that the solver is influenced by SBPs
+and explore the search space with a different manner and can affect performance negatively.
 
-Another disadvantage is that the solver is influenced by SBPs and explore the search space with a different 
-manner and can affect performance negatively.
 
 %\begin{figure}[!htbp]
 % \input{fig/big-picture-static}
@@ -572,16 +585,16 @@ manner and can affect performance negatively.
 
 
 Dynamic symmetry breaking approaches aims to exploits symmetries during the solving by altering search space dynamically.
-In the literature, different approaches of dynamic symmetry breaking are used to reduce the search space.
-This section presents some of them.
-
-%
-%of the sat solver in different ways.  In this section, we present different approach to use symmetrical properties of a problem dynamically.
-%
+This is possible with the integration of symmetry breaking approach inside existing SAT solver. It uses symmetries presents 
+in the formula to propagate symmetrical literals.
+As consequence, the solver reduces the number of decisions, that are chosen heuristically and increase the number of propagation
+that are consequence of the formula. In other words, symmetries allows to transform some "guesses" as "deductions".
+And so, improves performance of the underlying SAT solver.
+In the literature, different approaches of dynamic symmetry breaking, this section presents some of them.
 
 
 \subsubsection{SymChaff}
-One of the first dy namic symmetry breaking approaches is \emph{SymChaff}~\cite{sabharwal2005symchaff}
+One of the first dynamic symmetry breaking approaches is \emph{SymChaff}~\cite{sabharwal2005symchaff}
 and is applicable only on special groups where all couple of variables are symmetric \cref{sec:matrix-sbp}.
 The idea of this approach is to treat each orbit like a \emph{symbolic variable}, i.e. instead of considering a single
 variable (branching), all symmetric variables are considered at the same time and so backtracked at the same time 
@@ -655,9 +668,9 @@ Moreover, weakly active symmetries allow more propagation and so is more efficie
 Note that if a weakly active symmetry wants to propagate a symmetrical literal which are already affected to the 
 opposite value, this leads to a symmetry conflict and the solver backtrack to propagate the symmetrical value correctly.
 
-\hakan{Mettre des tableaux, courbes etc ...}\\
-\hakan{Courbe VS static an no sbp}\\
-\hakan{Conclu SP, depend on the solver choice}\\
+%\hakan{Mettre des tableaux, courbes etc ...}\\
+%\hakan{Courbe VS static an no sbp}\\
+%\hakan{Conclu SP, depend on the solver choice}\\
 
 Symmetry propagation gives good performances on many symmetric instances.
 The overall performance of the symmetry propagation is intrinsically related to the decision heuristics of the underlying SAT solver.
@@ -672,11 +685,12 @@ not lex-leader assignment were eliminated by symmetry breaking predicates.
 
 \subsubsection{Symmetry Explanation Learning}
 
-\hakan{Mettre REF sur SLS \cite{benhamou2010enhancing}}
 
 Another approach to exploit symmetry without removing any satisfiable assignment of the problem
 is \emph{Symmetry Explanation Learning}~\cite{devriendt2017symmetric} (SEL). 
 Symmetries of a formula leaves this one invariant. Moreover all learned clauses are logical consequence of the problem, symmetric of these clauses are also valid.
+Unlike Symmetry explanation scheme~\cite{benhamou2010enhancing} (SLS) where all symmetrical learned clauses
+are added to the clause database.
 The idea of this approach is to learn useful symmetrical variant of learned clauses.
  A clause is said useful if it participates to the unit propagation or conflict analysis.
 Computing all symmetrical learn clauses will create a huge overhead and will be intractable 
@@ -695,14 +709,19 @@ ensures that no duplicate clause is added in the problem.
 To limit memory impact, symmetrical clauses are removed when the propagated literal 
 responsible of the computation is unaffected.
 
-SEL provides some interesting properties. First, the authors proves that its propagation are a superset of the one provided by symmetry propagation. It also no need to track any status of 
+SEL provides some interesting properties. First, the authors proves that its propagation are a super-set of the one provided by symmetry propagation. It also no need to track any status of 
 symmetries as opposed to symmetry propagation. Like symmetry propagation no satisfying assignment are discarded.
 As disadvantage, SEL may flood the solver if the used set of symmetries is big and take time 
 to compute symmetrical clauses. 
 
 
+\subsection{Conclusion}
 
-\hakan{Perf of differents approaches}
+
+%SAT solvers are fine tuned algorithm to solve propositional formula, adding additional component that modify 
+%fundamentally the behavior of a SAT solver may impact negatively this performance.
+
+%\hakan{Perf of differents approaches}
 
 %\begin{proposition}[Satisfiability preservation] 
 %% mode: flyspell
