--- a/cosy.tex
+++ b/cosy.tex
@@ -1,5 +1,5 @@
-\chapter{SymmSAT}\label{chap:symmSAT}
-
+\chapter{Between Static and Dynamic\\ Symmetry Breaking}\label{chap:symmSAT}
+\minitoc
 
 This chapter presents our first contribution published in TACAS 2018 conference~\ref{algorithm:cdcl_cosy}. 
 
