--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1,6 +1,140 @@
-\chapter{Preliminaries}\label{chap:preliminaries}
+\chapter{The Boolean Satisfiability Problem}\label{chap:preliminaries}
+\minitoc
+
+In this thesis, our goal is to exploit symmetrical properties of a SAT problems.
+Before, get to the heart of the matter, we first introduce the Boolean satisfiability (SAT)  problems.
+These problems are propositional formula  representing constraints of a system.
+A SAT solver aims to satisfy all constraints present in the formula.
+It is a decision problem that answer $\sat$ if it is possible and $\unsat$ otherwise.
 
 \section{SAT basics}
+
+A most basic block of satisfiability problem is\emph{Boolean variable}, or \emph{propositional variable}.
+It has two possible values : true or false (noted respectively $\true$ or $\false$) that are \emph{constants}.
+We denote \emph{literal} $l$, a propositional variable or its negation.
+For a given variable $x$, the positive literal is represented by $x$ and the negative one by $\neg x$.
+To build more complex formula, it exists different operators, $\neg, \lor$ and $\land$ that are respectively negation, disjunction and conjunction. Others operators like $\Rightarrow, \Leftrightarrow$ and
+$\oplus,$ respectively called implication, equivalence and exclusive disjunction (xor) can be written with the basic one.
+For example $a \Rightarrow b$ can be expressed as $ \neg a \lor b$, where $a$ and $b$ are propositional variables.
+These operators have a different priority and given in decreasing order:
+negation ($\neg$), conjunction ($\land$), disjunction ($\lor$). To ensure
+the priority, constraints are between parenthesis.
+
+%The meaning of basic operators are given in the following truth table~\ref{tab:truthtable}:
+
+\begin{table}[!htbp]
+	\centering
+	\begin{tabular}{cc|ccc}
+		$x$ & $y$ & $\neg x$ & $x \lor y$ & $x \land y$ \\
+		\toprule
+		0 & 0 & 1 & 0 & 0 \\
+		\midrule
+		0 & 1 & 1 & 1 & 0 \\
+		\midrule
+		1 & 0 & 0 & 1 & 0 \\
+		\midrule
+		1 & 1 & 0 & 1 & 1 \\
+		\bottomrule
+	\end{tabular}
+	\caption{Truth table of basic operators}
+	\label{tab:truthtable}
+\end{table}
+
+The value given to each variable of a formula is called an \emph{assignment} noted $\alpha$ and defined as follow:
+	$$\alpha: \Vars \mapsto \{ \true, \false \}$$
+
+ As usual, $\alpha$ is said \emph{total}, or \emph{complete}, when all elements of $\Vars$ have an image by
+$\alpha$, otherwise it is \emph{partial}. By abuse of notation, an assignment is
+often represented by the set of its true literals.  The set of all (possibly
+partial) assignments of $\Vars$ is noted $\Assignments(\Vars)$.
+A \emph{truth table} gives an evaluation of all possible assignment for a given formula.
+\Cref{tab:truthtable} shows the evaluation of negation, conjunction and disjunction operators.
+For convenience, true value (\true) is also represented as $1$ and false value (\false) is represented as $0$.
+
+When a formula is always true independently from the assignment it is called a \emph{tautology}, $x \lor \neg x$ is 
+an example of tautologous formula.
+
+
+
+\subsection{Normal forms}
+
+In Boolean logic, it exists some structural properties, called \emph{normal form}.
+To present them, we first need to introduce \emph{clause} and \emph{cube} concepts.
+
+A \emph{clause} $\omega$ is a finite disjunction of literals represented by:
+ $$\omega = \bigvee_{i=1}^k l_i$$
+ 
+ 
+A \emph{cube} $\gamma$ is a finite conjunction of literals represented by:
+$$\gamma = \bigwedge_{i=1}^k l_i$$
+
+% Or equivalently by the set of its literals:
+%$$\omega = \{l_i\}_{i \in \llbracket 1,k \rrbracket}$$
+
+On respect to its size, a clause is said \emph{unary, binary or ternary} if it contains respectively one, two, three literals.
+The clause form have a property called \emph{subsumption}. 
+When a clause $\omega_1$ is subset of an other clause $\omega_2$ noted $\omega_1 \subset \omega_2$. And any 
+assignment that satisfies $\omega_1$ also satisfies $\omega_2$, so $omega_2$ is \emph{redundant} towards $\omega_1$ and so 
+can be removed of the formula.
+
+\emph{Conjunctive Normal Form} (CNF) of a formula is a finite conjunction of clauses
+ A CNF can be either noted:
+  $$\varphi = \bigwedge_{i=1}^k \omega_i$$
+  
+\emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes and noted:
+  $$\varphi = \bigvee_{i=1}^k \gamma_i$$
+
+The following table is a summary of existing laws about Boolean formulas that allow to transform any formula to
+a normal form.
+
+\begin{table}[!htbp]
+	\centering
+	\begin{tabular}{lllc}
+		
+		associativity & 
+		
+		
+		\emph{associativity of $\lor$} & $(x \lor y) \lor z \equiv x \lor (y \lor z)$\\
+		\emph{commutativity of $\lor$} & $x \lor y \equiv y \lor x$\\
+		\emph{identity} & $x \lor \false \equiv x$\\
+		\emph{domination} & $x \lor \true \equiv \true$\\
+		\emph{idempotent} & $x \lor x \equiv x$\\
+		\emph{distribution over $land$} & $x \lor (y \land z) \equiv (x \lor y) \land (x \lor z)$\\
+		
+		\\
+		\emph{associativity of $\land$} & $(x \land y) \land z \equiv x \land (y \land z)$\\
+		\emph{commutativity of $\land$} & $x \land y \equiv y \land x$\\
+		\emph{identity} & $x \land \true \equiv x$\\
+		\emph{domination} & $x \land \false \equiv \false$\\
+		\emph{idempotent} & $x \land x \equiv x$\\
+		\emph{distribution over $\lor$} & $x \land (y \lor z) \equiv (x \land y) \lor (x \land z)$\\
+ 		\\
+ 		\emph{negation 1} & $x \lor \neg x \equiv \false$\\
+  		\emph{negation 2} & $x \land \neg x \equiv \true$\\
+  		
+  		\emph{double negation} & $\neg (\neg x) \equiv x$ \\
+  		\emph{De Morgan 1} & $\neg x \lor \neg y \equiv \neg (x \land y)$\\
+  		\emph{De Morgan 2} & $\neg x \land \neg y \equiv \neg (x \lor y)$\\
+  		
+	\end{tabular}
+	\caption{Set of laws of operators}
+	\label{tab:laws}
+\end{table}
+
+
+Every formula can be transformed into a normal form with different complexity and the resulting formula is 
+\emph{equivalent}.  
+In other words, every assignment $\alpha$ that satisfies formula $\varphi$  also models the resulting formula $\psi$
+and vice-versa, denoted as $\varphi \equiv \psi$.
+ Also, we say a formula $\psi$ is \emph{logical consequence} of a formula $\varphi$ is every model of $\varphi$
+ is also a model of $\psi$ and is denoted as $\varphi \models \psi$.
+
+
+Conjunctive normal form is the input form of state-of-the-art solvers.
+ 
+Note that each cube in DNF is a solution to whole formula in CNF form.
+
+
 
 \subsection{Satisfiability problem}
 A \emph{Boolean variable}, or \emph{propositional variable}, is a variable that
@@ -8,6 +142,8 @@ has two possible values : true or false (noted respectively $\true$ or $\false$)
 A \emph{literal} $l$ is a propositional variable or its
 negation. For a given variable $x$, the positive literal is represented by $x$
 and the negative one by $\neg x$.
+
+
 A \emph{clause} $\omega$ is a finite disjunction of literals represented
 equivalently by $\omega = \bigvee_{i=1}^k l_i$ or the set of its literals
 $\omega = \{l_i\}_{i \in \llbracket 1,k \rrbracket}$. A clause with a single
@@ -235,12 +371,15 @@ Hence, it is much more efficient when coupled with the restart heuristics.
 Learning rate based branching (LRB~\cite{liang2016learning}) is a most recent decision heuristics. It is a
 generalization of VSIDS and its goal is to optimize the \emph{learning rate} (LR), defined as the ability to generate
 learnt clauses. The LRB of a variable is the weighted average (computed with \emph{exponential recency
-weighted average} (ERWA))  value taken by its LR over the time. Unassigned variable with a highest LRB are chose as decision. The idea behind this heuristics is to keep variables that used to generate learnt clause in the search tree.
+weighted average} (ERWA))  value taken by its LR over the time. Unassigned variable with a highest LRB are chose as decision. 
+The idea behind this heuristics is to keep variables that used to generate learnt clause in the search tree.
 
 
 \textbf{Restarts.}
 Another important heuristic is \emph{restart}. Basically the solver abandons it current assignment and so 
-start from the top of the tree, while maintaining other information notably learnt clauses but also scores of variables in the decision heuristic. It prevents the solver to get stuck in "hard" (heavy tailing~\cite{gomes1997heavy} part of the search space and can not escape due to backjump few levels after conflict resolution. Restart is best effort heuristics, hoping that,
+start from the top of the tree, while maintaining other information notably learnt clauses but also scores of variables in the decision heuristic. 
+It prevents the solver to get stuck in "hard" (heavy tailing~\cite{gomes1997heavy} part of the search space and can not escape due 
+to backjump few levels after conflict resolution. Restart is best effort heuristics, hoping that,
 with more information, a better assignments was made. Hence, in practice, SAT solvers usually restarts after a
 certain number of conflict. Empirically a solver with restart has a better results~\cite{huang2007effect} and is today
 used in almost all state of the art solvers.
@@ -248,7 +387,9 @@ used in almost all state of the art solvers.
 
 \subsection{Preprocessing / Inprocessing}
 
-In order to optimize resolution time by the solver, some transformation to simplify the original formula can be applied. This is done by \emph{preprocessing} engine before the start of solving. When it is used at some point during the solving, usually after a restart, it is called \emph{inprocessing}.
+In order to optimize resolution time by the solver, some transformation to simplify the original formula can be applied.
+This is done by \emph{preprocessing} engine before the start of solving.
+When it is used at some point during the solving, usually after a restart, it is called \emph{inprocessing}.
 
 Simplification of the formula is made by removing clauses and/or variables.\\
 \emph{Variable elimination} simplification is based on \emph{Resolution inference rule}.
@@ -287,4 +428,22 @@ SAT solver with different heuristics~\cite{le2017painless}~\cite{le2019modular}.
 
 
 
+
+%\begin{center}
+%\begin{tikzpicture}
+%\begin{scope}[blend group = soft light]
+%\fill[red!30!white]   ( 90:1.2) circle (2);
+%\fill[green!30!white] (210:1.2) circle (2);
+%\fill[blue!30!white]  (330:1.2) circle (2);
+%\end{scope}
+%\node at ( 90:2)    {$x$};
+%\node at ( 210:2)   {$y$};
+%\node at ( 330:2)   {$z$};
+%\node (c) {$x \land y \land z$};
+%
+%\node at ($ (c) + (-1.2, .7)$)   {$x \land y$};
+%\node at ($ (c) + (+1.2, .7)$)   {$x \land z$};
+%\node at ($ (c) + (0, -1.3)$)   {$y \land z$};
+%\end{tikzpicture}
+%\end{center}
 
