--- a/style.tex
+++ b/style.tex
@@ -1,5 +1,8 @@
+\DeclareSymbolFontAlphabet{\mathnormal}{letters}
+
 %%% Chapter style =============================================================
-\usepackage{calc,soul,fourier}
+
+
 \makeatletter
 \newlength\dlf@normtxtw
 \setlength\dlf@normtxtw{\textwidth}
