--- a/introduction.tex
+++ b/introduction.tex
@@ -1,32 +1,55 @@
 \chapter{Introduction}\label{chap:intro}
 
 
-\st{Nowadays, computers are powerfull and used in many applications in different domains.
+Nowadays, computers are powerful and used in many applications in different domains.
 On of this domain is critical application, these applications are running in planes, cars
 and some software must be secure. Proving the correctness of these software leads
 to combinatorial explosion.
-}
-
 Over the years, computers scientist have developed many techniques to solve 
 this kind of problems like \emph{constraint programming} (CP) \cite{rossi2006handbook},
 \emph{Propositional Satisfiability} (SAT) \cite{biere2009handbook},
 \emph{Satisfiability Modulo Theory} (SMT) \cite{barrett2018satisfiability}.
 
-In this thesis, we focus on \emph{propositional satisfiability} that is used in many
-applications in different domains: \emph{formal methods}: hardware model checking,
-software model checking, etc; \emph{artificial inteligence}: planning; \emph{games resolution}:
-sudoku, n-queens, \emph{Bioinformatics} : Haplotype inference,
-\emph{design automation} : equivalence checking
+In this thesis, we focus on solving propositional or Boolean formula, it is simply deciding whether 
+all constraints of a formula can be satisfiable and answer SAT, or it is not possible to satisfy all
+constraints and answer UNSAT.This problem may appear to be simple bu cannot be handled efficiently.
+This problem is the first one proved NP-complete and so means that every NP problem can be 
+expressed as a propositional formula. Hence, it is an important challenge to optimize solving time.
+Moreover, SAT is used as a basic component of more complex tools such SMT solvers.
+
+Over the last decades, SAT solver can handle more and more complicated problems in different domains:
+like \emph{formal methods}: hardware model checking,
+software model checking, etc; \emph{artificial intelligence}: planning; \emph{games resolution}:
+sudoku, n-queens, \emph{Bio informatics} : Haplotype inference,
+\emph{design automation} : equivalence checking.
+A recent works solves the Pythagorean triple, an old mathematical problems that be solved with a
+huge proof of 200TB.
  
+This success comes from the introduction of sophisticated heuristics and optimization of the solving 
+algorithm called Conflict Driven Clause Learning (CDCL) algorithm. It is based on the first non memory
+intensive algorithm named by its authors Davis, Putnam, Logemann, and Loveland (DPLL).
+
+Unfortunately, some problems still intractable for state of the art SAT solver. But, some 
+of them exhibits symmetries that can be exploited by the solver to accelerate the overall solving time.
+At its most basic, symmetry is some transformations of an object that leaves it  unchanged.
+In the case of satisfiability problems it maps a solution of a problem to another.
+Ignoring these properties forces the solver to explore equivalent search space and it is a loss of
+time and energy (let's save the world). 
+
+Effectively it leads to a combinatorial explosion
 
 
 
-At its most basic, symmetry is some transformations of an object that leaves this 
-object unchanged. In the case of satisfiability problems it maps a solution of a problem to another
-solution of the problem.
 
+In the literature, some works exists and tackle the symmetry problems in two different ways.
+The first one is made without any change of existing solvers. It takes the symmetric problem as input
+and produce an satisfiability equivalent formula without symmetries.
 
+The seconds one integrate a component to existing solver to handle symmetries and avoid it to manage
 
+\section{Contributions}
+
+\section{Structure of the manuscript}
 
 
 %% Local Variables:
